# Powrush-MMO

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DEBUG_REPORT_v19.1.md  AUDIO_MASTERING.md  AUDIO_MIXING.md  AUDIO_REALTIME_SYNTHESIS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT-SOVEREIGN.md  DERIVATION_ROADMAP.md  DERIVATION_STATUS.md  DIVINE_FEATURES.md  Dockerfile  ETERNAL_RA_THOR_PATSAGI_GOVERNANCE.md  LATTICE_FRACTURE_RESOLUTION.md  LAUNCH-CHECKLIST.md  LAUNCH_SCENARIO_SIMULATION.md  LICENSE  PHASE5-WEBSITE-WEBPORTAL.md  PROCEDURAL_WHISPERS.md  README.md  REALTIME_GENERATION.md  RECOVERY_INTEGRITY_REPORT_v18.96.md  RECOVERY_INTEGRITY_REPORT_v18.97.md  RECOVERY_INTEGRITY_REPORT_v18.99.md  RECOVERY_INTEGRITY_REPORT_v19.0.md  RELEASE-CHECKLIST.md  RELEASE_v14.7_GPU_PATSAGi.md  ROADMAP.md  STEAMWORKS-PRACTICAL-STARTER.md  STEAM_INTEGRATION.md  Trunk.toml  VISION.md  docker-compose.yml  dynamic_archetype_balance_sim.py  index.html  powrush_mmo_multi_server_experience_sim.py
client/: Cargo.toml  ambisonics_engine.rs  audio_moment_net_bridge.rs  bevy_harvest_integration.rs  binaural_ambisonics_decoder.rs  client_game_loop.rs  client_rbe_setup.rs  council_session_ui.rs  divine_whispers_ui.rs  epiphany_feedback.rs  higher_order_ambisonics.rs  inventory_components.rs  inventory_ui.rs  main.rs  pause_menu.rs  premade_audio_stems.rs  rbe_client_sync.rs  rbe_client_ui_sync.rs  rbe_ui_feedback.rs  realtime_audio_synthesis.rs  resource_node_visual.rs  settings.rs  settings_menu.rs  steam_cloud_audio_mirror.rs  steam_partner_config.rs  steamworks_remote_storage.rs  webxr_api.rs  webxr_bootstrap.rs  webxr_full_integration.rs  webxr_input_controller.rs  webxr_rendering_pipeline.rs
client/ambisonics_engine.rs/: ambisonics_engine.rs
client/binaural_ambisonics_decoder.rs/: binaural_ambisonics_decoder.rs
client/client_game_loop.rs/: client_game_loop.rs
client/higher_order_ambisonics.rs/: higher_order_ambisonics.rs
client/monitoring/: adaptive.rs  debug_overlay.rs  ensemble.rs  filters.rs  gpu_timestamps.rs  localization.rs  mod.rs  nvml_monitor.rs  performance_profiler.rs  rbe_flow_dashboard_ui.rs  rbe_flow_responder.rs  safety_net.rs
client/plugins/: ambrosian_aura_plugin.rs  council_mercy_plugin.rs  divine_plugin.rs  hyperon_vision_plugin.rs
client/rbe_client_ui_sync.rs/: rbe_client_ui_sync.rs
client/rbe_ui_feedback.rs/: rbe_ui_feedback.rs
client/shaders/: curvature_compute.wgsl  custom_shadow_sampling.wgsl  motion_blur.wgsl  mycelial_web_glow.wgsl  poisson_disk_pcf.wgsl  screen_space_reflections.wgsl  taa_reproject.wgsl  temporal_ssr_accumulation.wgsl  thread_curvature_compute.wgsl  valence_halo.wgsl  valence_thread.wgsl  velocity_prepass.wgsl
client/spatial_audio_engine.rs/: spatial_audio_engine.rs
client/src/: ability_bar.rs  ambisonics_engine.rs  anisotropic_filtering.rs  app.rs  behavioral_tracking.rs  bevy_ecs_scheduling.rs  binaural_ambisonics_decoder.rs  chromatic_aberration.rs  config.rs  council_bloom_feedback.rs  council_trial_ui.rs  council_ui.rs  delta_compression.rs  divine_whispers.rs  dynamic_events_ui.rs  dynamic_music.rs  egui_settings_panel.rs  epiphany_scenario_wiring.rs  example_gpu_material.rs  faction.rs  faction_diplomacy_ui.rs  faction_reputation_ui.rs  first_session_guidance.rs  fmod_audio.rs  fracture.rs  fundsp_audio.rs  gltf_integration.rs  higher_order_ambisonics.rs  input.rs  inventory_replication.rs  inventory_ui.rs  lib.rs  local_player.rs  localization.rs  main.rs  motion_blur.rs  multiplayer_web_deepening.rs  my_mercy_journey_panel.rs  networking.rs  oddio_backend.rs  (+35 more)
client/webxr_bootstrap.rs/: webxr_bootstrap.rs
crates/rsil-identity/: Cargo.toml  README.md
host/: Cargo.toml
host/src/: main.rs
powrush-divine-module/: Cargo.toml
powrush-divine-module/src/: ambrosian_resonance_bridge.rs  hyperon_vision_bridge.rs  lib.rs  mercy_core.rs  oracle_bridge.rs  valence_gate.rs
server/: Cargo.toml  council_session_handler.rs  divine_integration.rs  main.rs  persistence.rs  powrush-server.service  rbe_harvest_handler.rs  rbe_integration.rs
server/faction_diplomacy.rs/: faction_diplomacy.rs
server/rbe_harvest_handler.rs/: rbe_harvest_handler.rs
server/src/: anti_cheat.rs  ascension_abilities.rs  ascension_mercy_ascent.rs  audio_moment_catalog.rs  audio_moment_net_handler.rs  council_mercy_trial.rs  council_replication.rs  council_session.rs  council_session_handler.rs  dynamic_events.rs  faction_diplomacy.rs  grok_patsagi_bridge.rs  grok_patsagi_bridge_enhanced.rs  hardening.rs  harvesting_system.rs  hierarchical_grid.rs  interest_management.rs  inventory_replication.rs  lib.rs  main.rs  mercy_anomaly_detector.rs  mirror_reckoning.rs  opentelemetry_tracing.rs  persistence_polish.rs  player_account.rs  ra_thor_mercy_bridge.rs  rbe_abundance_feedback.rs  rbe_integration.rs  rbe_server.rs  reputation_leaderboard.rs  safety_net_broadcast.rs  server_war_system.rs  simulation.rs  spatial.rs  steam_integration.rs  technology_system.rs  telemetry.rs  telemetry_pipeline.rs  trade_system.rs  world_server.rs  (+1 more)
server/tests/: persistence_harvest_culling_integration.rs  persistence_tests.rs  rbe_distribution_inventory_sync_tests.rs
shared/: Cargo.toml  ecs.rs  lib.rs  protocol.rs  rbe_queries.rs
shared/ecs.rs/: ecs.rs
shared/src/: audio_moments.rs  council_mercy_trial.rs  lib.rs  protocol.rs
simulation/: Cargo.toml  PROFILING.md  justfile
simulation/benches/: channel_bench.rs  orchestrator_bench.rs  resonance_decay_recovery_bench.rs
simulation/examples/: emergence_flow_demo.rs
simulation/scripts/: multi_realm_war_harness.py  multi_realm_war_harness_v4plus.py  profiling.sh
simulation/src/: ability_tree.rs  archetype.rs  bevy_integration.rs  bevy_ra_thor_ui.rs  bot_detection.rs  closed_beta.rs  cloud_sync.rs  council_mercy_trial.rs  council_systems.rs  diplomacy.rs  divine_whispers.rs  drama_management_system.rs  economy.rs  emergence.rs  endocannabinoid_receptor_forge.rs  epigenetic_modulation.rs  epiphany_catalyst.rs  external_bridge.rs  flow_state_forge.rs  game_state.rs  gpu_economic.rs  grace_blessing.rs  (+24 more)
(+417 files in other folders)
