[package]
name = "powrush-mmo"
version = "0.18.97"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy_kira_audio = "0.20"
simulation = { path = "simulation" }
bevy_hanabi = { version = "0.10", features = ["3d"] }
bevy_egui = "0.25"
bevy_gltf = "0.14"

# Audio
kira = { version = "0.8", features = ["cpal"] }
fundsp = "0.18"
oddio = "0.7"
cpal = "0.15"
hound = "3.5"   # WAV file decoding for real audio layer support

# Optional: FMOD prototype
# bevy_fmod = { git = "https://github.com/kyren/bevy_fmod", branch = "main" }