[package]
name = "powrush-mmo-host"
version = "21.1.0"
edition = "2021"
authors = ["Sherif Samy Botros <info@Rathor.ai>"]
license = "AG-SML-1.0"
description = "Powrush-MMO unified co-host: runs simulation + server in one Bevy App with live CohostExportMirror RTT drain"

[[bin]]
name = "powrush-host"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_scene", "bevy_pbr", "bevy_sprite", "bevy_text", "bevy_ui", "multi_threaded", "png", "x11"] }
# Internal crates (path deps via workspace or direct)
simulation = { path = "../simulation" }
powrush-mmo-server = { path = "../server" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
