[package]
name = "powrush-divine-module"
version = "0.1.0"
edition = "2021"

[dependencies]
ra-thor-core = { path = "../../../Ra-Thor/ra-thor-core" }  # symlink or publish later
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
bevy = { version = "0.14", optional = true }  # client-side only

[features]
client = ["bevy"]
server = []
default = ["server"]
