[package]
name = "powrush-mmo-server"
version = "17.98.0"
edition = "2021"
license = "AG-SML-1.0 — Autonomicity Games Sovereign Mercy License"
authors = ["Sherif Samy Botros <ceo@acitygames.com>"]
description = "Powrush-MMO Authoritative Server — RBE simulation, replication, prediction reconciliation, and mercy-gated world state"
repository = "https://github.com/Eternally-Thriving-Grandmasterism/Powrush-MMO"

[dependencies]
bevy = { version = "0.14", features = ["bevy_render", "bevy_asset", "bevy_pbr", "bevy_scene"] }
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
bincode = "2.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# Internal crates
powrush-mmo-shared = { path = "../shared" }
powrush-mmo-client = { path = "../client" }  # for shared types only

[features]
default = []
dev = ["bevy/dynamic_linking"]

[lints.rust]
unsafe_code = "deny"
unused_crate_dependencies = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
