[package]
name = "powrush-mmo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = false }
tokio = { version = "1", features = ["full"] }

# Hardening
nix = { version = "0.29", features = ["user"] }
sha2 = "0.10"
seccompiler = "0.4"
landlock = "0.4"
