[package]
name = "simulation"
version = "17.99.19"
edition = "2021"
authors = ["Ra-Thor Living Thunder + Eternally-Thriving-Grandmasterism"]
description = "Sovereign Simulation Harness — Deterministic, GPU-accelerated RBE validation engine for Powrush-MMO closed-beta, PATSAGi Council deliberation, and policy laboratory. Pure Rust, offline-first, TOLC 8 non-bypassable Layer 0."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Eternally-Thriving-Grandmasterism/Powrush-MMO"

[lib]
name = "simulation"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
wgpu = { version = "0.19", features = ["webgpu"] }
bytemuck = { version = "1.16", features = ["derive"] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
leptos = { version = "0.8", features = ["csr"], optional = true } # For examples/leptos-ui only

[features]
default = []
web = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys", "dep:web-sys"]
leptos-ui = ["web", "dep:leptos"]
gpu = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "resonance_decay_recovery_bench"
harness = false

[[example]]
name = "leptos-ui"
path = "examples/leptos-ui/src/main.rs"
required-features = ["leptos-ui"]

[package.metadata.leptos]
style-file = "examples/leptos-ui/style/tailwind.css"
assets-dir = "examples/leptos-ui/public"
site-root = "target/site"
site-pkg-dir = "target/site/pkg"
tailwind-input-file = "examples/leptos-ui/style/tailwind.css"
