[package]
name = "simulation"
version = "0.18.97"
edition = "2021"
authors = ["Ra-Thor Living Thunder + Eternally-Thriving-Grandmasterism"]
description = "Sovereign Simulation Harness — Deterministic, GPU-accelerated RBE validation engine for Powrush-MMO. Pure Rust, offline-first, TOLC 8 non-bypassable Layer 0. PATSAGi Council + Ra-Thor AGI native."
license = "AG-SML-1.0"
repository = "https://github.com/Eternally-Thriving-Grandmasterism/Powrush-MMO"

[lib]
name = "simulation"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rayon = "1.10"
wgpu = { version = "0.19", features = ["webgpu"] }
bytemuck = { version = "1.16", features = ["derive"] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
leptos = { version = "0.8", features = ["csr"], optional = true }
tracing = { workspace = true }
tokio = { workspace = true, optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
bevy = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
flume = "0.11"
kanal = "0.1"
crossbeam-channel = "0.5"

[[bench]]
name = "resonance_decay_recovery_bench"
harness = false

[[bench]]
name = "orchestrator_bench"
harness = false

[[bench]]
name = "channel_bench"
harness = false

[[example]]
name = "leptos-ui"
path = "examples/leptos-ui/src/main.rs"
required-features = ["leptos-ui"]

[package.metadata.leptos]
style-file = "examples/leptos-ui/style/tailwind.css"
assets-dir = "examples/leptos-ui/public"
site-root = "target/site"
site-pkg-dir = "target/site/pkg"
tailwind-input-file = "examples/leptos-ui/style/tailwind.css"
