[package]
name = "simulation"
version = "21.1.0"
edition = "2021"
authors = ["Sherif Samy Botros <info@Rathor.ai>"]
license = "AG-SML-1.0"
description = "Powrush-MMO Simulation Layer — Orchestrator, Council, RBE, Kardashev, Multi-Realm, Telemetry"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_scene",
    "bevy_pbr", "bevy_sprite", "bevy_text", "bevy_ui", "multi_threaded"
] }
bevy_egui = "0.28"
bevy_hanabi = { version = "0.13", features = ["bevy"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
async-channel = "2"
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
shamirs-secret-sharing = "0.1"
rand = "0.8"

[features]
default = []
gpu = []
audio = []
